--- a/Patient/model.yaml
+++ b/Patient/model.yaml
@@ -38064,8 +38064,10 @@ Patient:
       x-ngsi:
         type: Property
     resourceType:
-      const: Patient
       description: 'This is a Patient resource'
+      enum:
+        - Patient
+      type: string
       x-ngsi:
         type: Property
     seeAlso:
