--- a/Medication/ADOPTERS.yaml
+++ b/Medication/ADOPTERS.yaml
@@ -1,4 +1,4 @@
-description: This is a compilation list of the current adopters of the data model Patient of the Subject dataModel.HL7.
+description: This is a compilation list of the current adopters of the data model Medication of the Subject dataModel.HL7.
 currentAdopters:
 -
  adopter:
