--- a/Citation/model.yaml
+++ b/Citation/model.yaml
@@ -43699,7 +43699,7 @@ Citation:
     location:
       description: 'Geojson reference to the item. It can be Point, LineString, Polygon, MultiPoint, MultiLineString or MultiPolygon'
       oneOf:
-        - description: Geoproperty. Geojson reference to the item. Point
+        - description: GeoProperty. Geojson reference to the item. Point
           properties:
             bbox:
               items:
@@ -43720,7 +43720,7 @@ Citation:
             - coordinates
           title: GeoJSON Point
           type: object
-        - description: Geoproperty. Geojson reference to the item. LineString
+        - description: GeoProperty. Geojson reference to the item. LineString
           properties:
             bbox:
               items:
@@ -43744,7 +43744,7 @@ Citation:
             - coordinates
           title: GeoJSON LineString
           type: object
-        - description: Geoproperty. Geojson reference to the item. Polygon
+        - description: GeoProperty. Geojson reference to the item. Polygon
           properties:
             bbox:
               items:
@@ -43770,7 +43770,7 @@ Citation:
             - coordinates
           title: GeoJSON Polygon
           type: object
-        - description: Geoproperty. Geojson reference to the item. MultiPoint
+        - description: GeoProperty. Geojson reference to the item. MultiPoint
           properties:
             bbox:
               items:
@@ -43793,7 +43793,7 @@ Citation:
             - coordinates
           title: GeoJSON MultiPoint
           type: object
-        - description: Geoproperty. Geojson reference to the item. MultiLineString
+        - description: GeoProperty. Geojson reference to the item. MultiLineString
           properties:
             bbox:
               items:
@@ -43819,7 +43819,7 @@ Citation:
             - coordinates
           title: GeoJSON MultiLineString
           type: object
-        - description: Geoproperty. Geojson reference to the item. MultiLineString
+        - description: GeoProperty. Geojson reference to the item. MultiLineString
           properties:
             bbox:
               items:
@@ -43848,7 +43848,7 @@ Citation:
           title: GeoJSON MultiPolygon
           type: object
       x-ngsi:
-        type: Geoproperty
+        type: GeoProperty
     meta:
       additionalProperties: false
       description: The metadata about the resource. This is content that is maintained by the infrastructure. Changes to the content might not always be associated with version changes to the resource.
