--- a/Organization/model.yaml
+++ b/Organization/model.yaml
@@ -14835,7 +14835,7 @@ Organization:
     location:
       description: 'Geojson reference to the item. It can be Point, LineString, Polygon, MultiPoint, MultiLineString or MultiPolygon'
       oneOf:
-        - description: Geoproperty. Geojson reference to the item. Point
+        - description: GeoProperty. Geojson reference to the item. Point
           properties:
             bbox:
               items:
@@ -14856,7 +14856,7 @@ Organization:
             - coordinates
           title: GeoJSON Point
           type: object
-        - description: Geoproperty. Geojson reference to the item. LineString
+        - description: GeoProperty. Geojson reference to the item. LineString
           properties:
             bbox:
               items:
@@ -14880,7 +14880,7 @@ Organization:
             - coordinates
           title: GeoJSON LineString
           type: object
-        - description: Geoproperty. Geojson reference to the item. Polygon
+        - description: GeoProperty. Geojson reference to the item. Polygon
           properties:
             bbox:
               items:
@@ -14906,7 +14906,7 @@ Organization:
             - coordinates
           title: GeoJSON Polygon
           type: object
-        - description: Geoproperty. Geojson reference to the item. MultiPoint
+        - description: GeoProperty. Geojson reference to the item. MultiPoint
           properties:
             bbox:
               items:
@@ -14929,7 +14929,7 @@ Organization:
             - coordinates
           title: GeoJSON MultiPoint
           type: object
-        - description: Geoproperty. Geojson reference to the item. MultiLineString
+        - description: GeoProperty. Geojson reference to the item. MultiLineString
           properties:
             bbox:
               items:
@@ -14955,7 +14955,7 @@ Organization:
             - coordinates
           title: GeoJSON MultiLineString
           type: object
-        - description: Geoproperty. Geojson reference to the item. MultiLineString
+        - description: GeoProperty. Geojson reference to the item. MultiLineString
           properties:
             bbox:
               items:
@@ -14984,7 +14984,7 @@ Organization:
           title: GeoJSON MultiPolygon
           type: object
       x-ngsi:
-        type: Geoproperty
+        type: GeoProperty
     meta:
       additionalProperties: false
       description: The metadata about the resource. This is content that is maintained by the infrastructure. Changes to the content might not always be associated with version changes to the resource.
